--- a/videos/templates/video.html
+++ b/videos/templates/video.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="titre_et_vues_auteurs">{{ video|auteurs }}</div>
-    <div class="titre_et_vues_info">Une information pertinente</div>
+    <div class="titre_et_vues_info">Catégorie : <a href="{% url 'category' video.category.id 1 %}">{{video.category.titre}}</a></div>
 
     <div class="nb_vues">
 		 {{ video.views }} vues
