--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -14,17 +14,34 @@
         document.getElementById("txtHint").innerHTML = "";
         return;
     } else {
-      document.getElementById("txtHint").innerHTML = str;
-        var xmlhttp = new XMLHttpRequest();
-        xmlhttp.onreadystatechange = function() {
-            if (this.readyState == 4 && this.status == 200) {
-                document.getElementById("txtHint").innerHTML = this.responseText;
-            }
-        };
-        xmlhttp.open("GET", "gethint.php?q=" + str, true);
-        xmlhttp.send();
+
+      a=getJSON('/suggestions/'+str,
+function(err, data) {
+if (err != null) {
+  alert('Something went wrong: ' + err);
+} else {
+  alert('Your query count: ' + data.query.count);
+}
+});
+        document.getElementById("txtHint").innerHTML = a;
+
     }
   }
+
+  var getJSON = function(url, callback) {
+    var xhr = new XMLHttpRequest();
+    xhr.open('GET', url, true);
+    xhr.responseType = 'json';
+    xhr.onload = function() {
+      var status = xhr.status;
+      if (status == 200) {
+        callback(null, xhr.response);
+      } else {
+        callback(status);
+      }
+    };
+    xhr.send();
+};
 
   function checkbar(){
     var show = getCookie("show");
@@ -103,7 +120,7 @@ function cacher_results(){
     </a>
 
     <div class="barre_de_recherche">
-        <form method="get" action="{% url 'search' %}"><input placeholder="Rechercher" onblur="cacher_results()" onfocus="afficher_results()" type="text" name="q" class='biginput' onkeyup="showHint(this.value)"></form>
+        <form method="get" action="{% url 'search' %}"><input autocomplete="off" placeholder="Rechercher" onblur="cacher_results()" onfocus="afficher_results()" type="text" name="q" class='biginput' onkeyup="showHint(this.value)"></form>
     </div>
 
   </div>
