--- a/videos/templates/videos.html
+++ b/videos/templates/videos.html
@@ -28,7 +28,7 @@
 
 		<div class="legende_vid_auteur">
 					<a href="#">
-						{{v|auteurs}}
+						{{v|auteurs|striptags}}
 					</a>
 					-
 					{{v.views}}
