--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -9,33 +9,39 @@
   <title>JTX</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script>
-  $(document).ready(function(){
-      $("button").click(function(){
-          $.getJSON("{% url 'suggestions' "" %}/lannoo/", function(result){
-              $.each(result, function(i, field){
-                  $("#images").append(i + field + " "+ result);
-              });
-          });
-      });
-  });
+
+
+  $(document).ready(function () {
+    $('input').click(function () {
+
+  });});
+
 
   function showHint(str) {
     if (str.length == 0) {
         document.getElementById("txtHint").innerHTML = "";
         return;
     } else {
-      $.getJSON( "suggestions/"+str+"/", function( data ) {
-          var items = [];
-          $.each( data, function( key, val ) {
-            items.push( "<li id='" + key + "'>" + val + "</li>" );
-          });
 
-          $( "<ul/>", {
-            "class": "my-new-list",
-            html: items.join( "" )
-          }).appendTo( "txtHint" );
+      var showData = $('#txtHint');
+
+        $.getJSON("{% url 'suggestions' " str "%}", function(data){
+
+
+
+
+        var videos = data.videos.map(function (video) {
+          return '<a href="'+video.url+'">'+video.titre + ': ' + video.duree+"</a>";
         });
 
+        showData.empty();
+
+        if (videos.length) {
+          var content = '<div class="search_result">' + videos.join('</div><div class="search_result">') + '</div>';
+          //var list = $('<ul />').html(content);
+          showData.append(content);
+        }
+});
 
     }
   }
@@ -109,10 +115,6 @@ function cacher_results(){
     </button>
 
 
-<div id='images'>
-  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-</div>
-
   <div id="navigation_bar">
     <a href="{% url 'index' %}">
     <div class="navigation_bar_titre">
@@ -131,8 +133,7 @@ function cacher_results(){
         <a href="#" >Je suis une suggestion</a>
     </div>
 
-      <a href="#" class="search_result">Et moi une autre </a><br>
-    <a href="#" class="search_result">Et moi une troisième.</a>
+
   </div>
   <!-- A changer pour mettre un lien absolu! -->
 
