--- a/videos/static/style.css
+++ b/videos/static/style.css
@@ -1,3 +1,4 @@
+
 * {
     font-family: Roboto;
 }
@@ -187,21 +188,24 @@ form .biginput:focus {
 
 .menu_button{
 
-    display: table-cell;
+display: table-cell;
 background-color: white;
 position: fixed;
-margin-top: 5px;
-margin-left: 7px;
+margin-top: 1px;
+margin-left: 0px;
 visibility: visible;
 z-index: 2;
-padding: 7px;
-padding-bottom: 3px;
+padding-left: 13px;
+padding-right: 13px;
+padding-bottom: 8px;
+padding-top: 11px;
 opacity: 0.6;
 border-style: none;
 }
 
 .menu_button:hover{
   opacity: 1;
+  cursor: pointer;
 }
 
 .menu_button_img{
@@ -373,8 +377,6 @@ Style des listes de vidéos et de projs
 .proj_image{
   max-width:200px;
   max-height: 113px;
-  margin-left: auto;
-  margin-right: auto;
   display: table-cell;
   margin-bottom: 4px;
 }
@@ -383,6 +385,7 @@ Style des listes de vidéos et de projs
 .img_vid{
   max-width:200px;
   max-height: 113px;
+  margin: auto;
 }
 
 /*
@@ -391,22 +394,41 @@ Concerne l'affichage des légendes des vidéos
 ------------------------------------------
  */
 .legende_vid_duree{
-  margin-top: -20px;
-  margin-right: 3px;
+  display:inline-block;
+  float: right;
+  position: relative;
+  top:-25px;
+  left:-3px;
+
+  padding-left: 3px;
+  padding-right: 3px;
+  padding-top: 1px;
+  padding-bottom: 1px;
+
   text-align: right;
+  background-color: black;
+  font-weight: 500;
   color:white;
   font-size: 13px;
   text-shadow: 0px 0px 3px black;
+
+  opacity: 0.8;
+
+  margin-bottom: -20px;
+
+
+
 }
 
 .legende_vid_titre{
-  color:#167ac6;
+  color:#167AC6;
   width: 200px;
   max-height: 40px;
   overflow: hidden;
   text-decoration: none;
   font-size: 13px;
-  font-weight: bold;
+  font-weight:500 !important;
+
 }
 
 
@@ -1063,7 +1085,8 @@ padding-top: 5px;
 .container h1{
   padding-top: 5px;
   font-size:18px;
-  font-weight:bolder;
+  font-weight:500;
+  color:#333333;
 }
 
 .container ul{
@@ -1102,12 +1125,17 @@ padding-top: 5px;
   text-decoration: underline;
 }
 
+.petit_point{
+  font-size:07px;
+  vertical-align: middle;
+}
+
 .legende_vid_auteur{
   text-decoration: none;
-  color:grey;
+  color:#767676;
+  font-weight: 400;
   width: 200px;
   font-size: 12px;
-  margin-bottom: 15px;
 }
 
 .legende_vid_auteur a{
@@ -1132,6 +1160,7 @@ padding-top: 5px;
   padding-left: 5px;
   padding-right: 5px;
   display: inline-block;
+
 }
 
 
@@ -1180,7 +1209,8 @@ padding-top: 5px;
 
 .container_suggestion h1{
   font-size:18px;
-  font-weight:bolder;
+  font-weight:300;
+  color:#333333;
 }
 
 .container_suggestion figure{
