--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8"/>
   <link rel="stylesheet" href="{% static 'style.css' %}"/>
-  <link href='//fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+  <link href='//fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700,800,900' rel='stylesheet'>
   <title>JTX</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script>
