--- a/videos/templates/video.html
+++ b/videos/templates/video.html
@@ -8,7 +8,7 @@
 <div style="margin-top:0;display:table">
 <div style="margin-top:0;display:block">
 
-<div style="margin-top:0;display:table-cell;vertical-align:top;">
+<div style="margin-top:0;display:table-cell;vertical-align:top;padding-right:10px;">
 
     <video id="video" controls autoplay>
         <source src="{{video.url}}">
