--- a/videos/templates/edit_video.html
+++ b/videos/templates/edit_video.html
@@ -5,41 +5,152 @@
 {{message}}
 {% endif %}
 
+<div class="container">
+
+
+
 <h1>Édition d'une vidéo</h1>
 
 {% if v %}
 
-<form action="{% url 'edit_video' v.id %}" method="post">
+<form action="{% url 'edit_video' v.id %}" method="post" class='edit_form'>
 
     {% csrf_token %}
 
-    <label for="titre">Titre :</label>
-    <input id="titre" size="50" type="text" value="{{v.titre}}" name="titre"/>
-    <br/><br/>
+  <table style="width:100%" class="edit_video">
+  <tr>
+    <th class="col1">  <label for="titre">Titre :</label></th>
+    <th><input class="input_edit" id="titre" size="50" type="text" value="{{v.titre}}" name="titre" onfocus="ffocus('titre')" onblur="defocus('titre')"/></th>
+  </tr>
 
-    <label for="url">URL :<label>
-    <input id="url" size="100" type="text" name="url" value="{{v.url}}"/>
-    <br/><br/>
-    
-    <label for="duree">Durée :<label>
-    <input id="duree" type="number" name="duree" value="{{v.duree}}" min="1" step="1"/>
-    <br/><br/>
+  <tr>
+    <th class="col1">   <label  for="url">URL :<label> </th>
+    <th>  <input class="input_edit" id="url" size="100" type="text" name="url" value="{{v.url}}" onfocus="ffocus('url')" onblur="defocus('url')"/></th>
+  </tr>
 
-    <label for="category">Catégorie :<label>
-    <select name="category">
-    {% for c in categories %}
-        <option {% if v.category == c %} selected {% endif %} value="{{c.id}}">{{c.titre}}</option>
-    {% endfor %}
-    </select>
-    <br/><br/>
 
-    <label for="description">Description :</label>
-    <textarea id="description" name="description">{{v.description}}</textarea>
-    <br/><br/>
 
-    <input type="submit" value="Modifier la vidéo"/>
+  <tr>
+    <th class="col1">   <label for="duree">Durée :<label> </th>
+    <th> <input class="input_edit" id="duree" type="number" name="duree" value="{{v.duree}}" min="1" step="1"/> </th>
+  </tr>
+
+  <tr>
+    <th class="col1">     <label for="category">Catégorie :<label> </th>
+    <th>   <select class="input_edit" name="category">
+      {% for c in categories %}
+          <option {% if v.category == c %} selected {% endif %} value="{{c.id}}">{{c.titre}}</option>
+      {% endfor %}
+      </select>
+    </th>
+  </tr>
+
+  <tr>
+    <th class="col1"><label for="description">Description :</label><br>  </th>
+    <th>    <textarea class="input_edit" id="description_edit" name="description">{{v.description}}</textarea></th>
+  </tr>
+
+</table>
+
+    <input type="submit" class="edit_bouton" value="Modifier la vidéo"/>
+
 
 </form>
+
+</div>
+
+<div  style="display:hidden;">
+  <p id="hidden_titre" style="display:inline-block;font-size:14px;color:#f1f1f1;position:relative; top:-1000px;" style="display:hidden;"></p>
+    <p id="hidden_url" style="display:inline-block;font-size:14px;color:#f1f1f1;position:relative; top:-1000px;" style="display:hidden;"></p>
+
+</div>
+<script type="text/javascript">
+
+defocus('titre');
+defocus('url');
+
+
+  function linear(i){
+    return i;
+  }
+
+
+
+
+
+
+  function ffocus(element_namee){
+    var element=document.getElementById(element_namee);
+    var style = window.getComputedStyle(element);
+    var debut= parseInt(style.getPropertyValue('width'));
+    var fin =700;
+    animate({
+  duration: 500,
+  timing:makeEaseInOut(linear),
+  draw: function(progress) {
+  document.getElementById(element_namee).style.width  = debut+progress*(fin-debut)+ 'px';
+  }
+});
+
+  }
+
+  function defocus(element_name){
+    var element=document.getElementById(element_name);
+    var style = window.getComputedStyle(element);
+    var debut= parseInt(style.getPropertyValue('width'));
+
+    document.getElementById("hidden_"+element_name).innerHTML=document.getElementById(element_name).value;
+
+
+    var element2=document.getElementById("hidden_"+element_name);
+    var style2 = window.getComputedStyle(element2);
+    var fin= parseInt(style2.getPropertyValue('width'))+3;
+
+    document.getElementById("hidden_"+element_name).style.dislay="hidden";
+
+    animate({
+  duration: 500,
+  timing:makeEaseInOut(linear),
+  draw: function(progress) {
+  document.getElementById(element_name).style.width  = debut+progress*(fin-debut)+ 'px';
+  }
+});
+
+  }
+
+  function animate({timing, draw, duration}) {
+
+  let start = performance.now();
+
+  requestAnimationFrame(function animate(time) {
+    // timeFraction goes from 0 to 1
+    let timeFraction = (time - start) / duration;
+    if (timeFraction > 1) timeFraction = 1;
+
+    // calculate the current animation state
+    let progress = timing(timeFraction);
+
+    draw(progress); // draw it
+
+    if (timeFraction < 1) {
+      requestAnimationFrame(animate);
+    }
+
+  });
+}
+
+function makeEaseInOut(timing) {
+  return function(timeFraction) {
+    if (timeFraction < .5)
+      return timing(2 * timeFraction) / 2;
+    else
+      return (2 - timing(2 * (1 - timeFraction))) / 2;
+  }
+}
+
+
+
+</script>
 
 {% endif %}
 
